# epic-tipbot

./: .gitignore  .gitmodules  README.md  requirements.txt  requirements_v2.txt  requirements_v3.txt
django-backend/: pyproject.toml
django-backend/core/: js_handler.py  logger_.py  settings.py  urls.py
django-backend/static/js/: app.jsx
django-backend/templates/: index.html
django-backend/tipbot/: serializers.py  urls.py  views.py
django-backend/vitejs/: package-lock.json  package.json  vite.config.js
django-backend/vtm/: apps.py  managers.py  urls.py
django-nodejs-backend/: package.json  pyproject.toml  vite.config.js
django-nodejs-backend/core/: asgi.py  js_handler.py  settings.py  urls.py  utils.py  vite_connector.py
django-nodejs-backend/tipbot/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
django-nodejs-backend/vtm/: managers.py  models.py  serializers.py  tests.py  urls.py  views.py
django_backend/django_backend/: api.py  secret_links.py  secrets.py  settings.py  urls.py  utils.py
django_backend/templates/: index.html
django_backend/tipbot/: admin.py  models.py  serializers.py  urls.py  views.py
django_backend/vtm/: admin.py  managers.py  models.py  urls.py  views.py
telegram-bot/: long_strings.py  main.py  settings.py  test.py  tipbot_storage.pickle  tools.py
telegram-bot/src/: __init__.py  commands.py  logger_.py  settings.py  tools.py  user.py
telegram_bot/: epic_handlers.py  main.py  vite_handlers.py
telegram_bot/src/: __init__.py  (+7 more)
vite-nodejs/: api_handler.js  package.json  tools.js  vite-wallet-api.js
(+27 files in other folders)
