[tool.poetry]
name = "django-nodejs-tipbot"
version = "2.0.0"
description = "Telegram TipBot - Django+NodeJS as backend, telegram bot as interface"
authors = ["blacktyg3r"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.10"
django = "^3.2.4"
django-vite = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
